Fix problem with broken CSS and bump version

--- a/content-scripts/autocomplete.css
+++ b/content-scripts/autocomplete.css
@@ -5,11 +5,21 @@
     min-width: 200px;
 }
 .ui-menu.ui-widget.ui-widget-content.ui-autocomplete.simple-form-fill .ui-menu-item {
+    cursor: pointer;
     padding: 0 !important;
 }
-.ui-menu.ui-widget.ui-widget-content.ui-autocomplete.simple-form-fill .ui-menu-item .comment {
+.ui-menu.ui-widget.ui-widget-content.ui-autocomplete.simple-form-fill .ui-menu-item .ui-menu-item-wrapper {
+    border: 1px solid transparent;
+    padding: 3px 1em 3px 0.4em;
+}
+.ui-menu.ui-widget.ui-widget-content.ui-autocomplete.simple-form-fill .ui-menu-item .ui-menu-item-wrapper.ui-state-active {
+    background: #007fff;
+    border: 1px solid #003eff;
+    color: #FFFFFF;
+}
+.ui-menu.ui-widget.ui-widget-content.ui-autocomplete.simple-form-fill .ui-menu-item .ui-menu-item-wrapper.comment {
     color: #AAAAAA;
 }
-.ui-menu.ui-widget.ui-widget-content.ui-autocomplete.simple-form-fill .ui-menu-item .ui-state-active .comment {
+.ui-menu.ui-widget.ui-widget-content.ui-autocomplete.simple-form-fill .ui-menu-item .ui-menu-item-wrapper.ui-state-active .comment {
     color: #FFFFFF;
 }
